# cog

./: Cargo.toml  cog.rar  implementation.md
.claude/: settings.local.json
src/: agent.rs  bus.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  message.rs  state.rs  utils.rs
src/memory/: embedders.rs  manager.rs  mod.rs  schema.rs
src/nodes/: context.rs  executor.rs  mod.rs  planner.rs  recovery.rs  reflector.rs  verifier.rs
src/provider/: custom.rs  dummy.rs  groq.rs  mistral.rs  mod.rs  nvidia.rs  openai.rs  openai_compatible.rs  retrying.rs
src/tools/: ask_user.rs  edit_file.rs  fetch_crate_docs.rs  git_commit.rs  git_diff.rs  lang_spec.rs  list_dir.rs  memory_tools.rs  mod.rs  read_file.rs  run_command.rs  run_test_suite.rs  search_regex.rs  search_semantic.rs  semantic_index.rs  semantic_replace.rs  web_fetch.rs  write_file.rs
src/tui/: app.rs  event.rs  mod.rs
src/tui/widgets/: chat_panel.rs  confirm_popup.rs  file_tree.rs  input_bar.rs  memory_inspector.rs  mod.rs  status_bar.rs
tests/: memory.rs  nodes.rs  provider_mock.rs  tools.rs  tools_advanced.rs
