[package]
name = "cog"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cog"
path = "src/main.rs"

[lib]
name = "cog"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.52", features = ["full"] }
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
thiserror = "2.0"
toml = "1.1"
dirs = "6.0"
async-trait = "0.1"
reqwest = { version = "0.13", features = ["json", "stream"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tui-input = { version = "0.15", features = ["ratatui-crossterm"] }
regex = "1"
html2text = "0.16"
similar = { version = "3.1", features = ["text"] }
notify = "8.2"
walkdir = "2.5"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
# Pinned below 0.38+'s libsqlite3-sys, whose build script uses the unstable
# `cfg_select!` macro and fails to compile on stable rustc 1.94.
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1.9"
zerocopy = { version = "0.8", features = ["derive"] }
ignore = "0.4"
uuid = { version = "1.23.3", features = ["v4"] }
tui-markdown = "0.3.7"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
